2004-05-10  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>

	Fixes bug #44196 addressbook table view uses ASCII sort

	* addressbook/gui/widgets/e-addressbook-view.c (compare_subitems):
	Uses g_utf8_collate for right UTF8 sort. Made faster using 
	g_utf8_collate_key.

	Also fixes a bug in 

	* gui/component/select-names/e-select-names.c (select_entry_changed):
	Changed g_utf8_collate for strcmp as we are already comparing keys
	made from g_utf8_collate_key.

2004-05-08  Enver ALTIN  <enver.altin@frontsite.com.tr>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in:
	  Fix parts of #53466.

2004-05-05  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/e-contact-editor.c (init_address_textview):
	Implement.
	(init_address_record): Init textview.
	(fill_in_address_textview): Implement.
	(fill_in_address_record): Fill in textview.
	(extract_address_textview): Implement.
	(extract_address_record): Extract from textview.

	* gui/contact-editor/contact-editor.glade: Combine address-[12] fields
	into one multiline text view, as per Anna's new design.

2004-05-04  Larry Ewing  <lewing@ximian.com>

	* gui/component/addressbook-config.c (query_for_supported_bases):
	fixup the dialog initialization.

2004-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/e-contact-editor.c (phones_default): Use defaults
	from Anna.
	(im_service_default): Ditto.
	(email_default): Ditto.
	(im_location): Renamed to common_location, as it's used by both IM
	and e-mail.
	(init_email_record_location): im_location -> common_location
	(init_im_record_location): Ditto.
	(email_index_to_location): Ditto.
	(im_index_to_location): Ditto.
	(get_email_location): Ditto.
	(get_im_location): Ditto.
	(fill_in_email_record): Consult defaults.
	(fill_in_im_record): Ditto.

2004-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/e-contact-editor.c (set_entry_activate_signals):
	Remove blog, add home page.
	(set_entry_changed_signals): Ditto.