@@ -1,3 +1,9 @@
+2004-05-11  Sivaiah Nallagatla  <snallagatla@novell.com>
+                                                                                                                             
+       * gui/component/addressbook-config.c (dialog_to_source) : see if the selected
+        group is groupwise one and setup the relative uri and other properties into
+        e-source
+
 2004-05-10  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>
 
 	Fixes bug #44196 addressbook table view uses ASCII sort
